--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+//spring.datasource.url=jdbc:h2:tcp://localhost/C:/Users/fpejk/data/bazaHighFrontier
+//spring.datasource.url=jdbc:h2:file:C:/Users/fpejk/data/bazaHighFrontier
 spring.datasource.url=jdbc:h2:tcp://localhost/C:/Users/fpejk/data/bazaHighFrontier
-
 spring.datasource.username=admin
 spring.datasource.password=admin
 
